# smat_msg_search

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/routes/: mod.rs
src/routes/index/: mod.rs
src/routes/status/: mod.rs
templates/: index.html
tests/: server.ini
