[package]
name = "smat_msg_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "filter"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.11.1"
regex = "1.7.0"
lazy_static = "1.4.0"
itertools = "0.10.5"
tinytemplate = "1.2.1"
handlebars = "4.3.5"